Fix some awkward spacing when SwatDisclosure widgets were closed - other minor visual tweaks
git-svn-id: file:///Users/gauthierm/svnrepo/swat/trunk@3653 94490950-a86c-4493-9ccb-530f72933e47

--- a/www/styles/swat-disclosure.css
+++ b/www/styles/swat-disclosure.css
@@ -4,14 +4,14 @@
 	position: relative;
 	top: 0.7em;
 	display: inline;
-	margin: 0 10px;
-	padding: 0 6px;
+	margin: 0 10px 0 5px;
+	padding: 0 5px 0 2px;
 	color: #666;
 	background: #FFF;
 }
 
 .swat-disclosure-control-closed {
-	margin-bottom: 1em;
+	margin-bottom: 1.7em;
 }
 
 
